--- a/client/tech-news-app/src/styles/Header.css
+++ b/client/tech-news-app/src/styles/Header.css
@@ -1,3 +1,12 @@
 .auth-button{
     margin-top: 20px;
 }
+
+.sing-in-button{
+    margin-left: 5px;
+}
+
+.site-logo {
+    text-decoration: none!important;
+    color: grey;
+}
