--- a/client/tech-news-app/src/styles/Header.css
+++ b/client/tech-news-app/src/styles/Header.css
@@ -10,3 +10,11 @@
     text-decoration: none!important;
     color: grey;
 }
+
+.navbar-body {
+    margin-bottom: 5px;
+}
+
+.navlink {
+    font-size: 1.15em;
+}
