--- a/client/tech-news-app/src/styles/Posts.css
+++ b/client/tech-news-app/src/styles/Posts.css
@@ -13,3 +13,20 @@
     margin-bottom: 10px;
     max-width: 90%;
 }
+
+.post-review-pic {
+    width: 500px!important;
+    height: 350px!important;
+}
+
+
+ /*post-review*/
+.post-author {
+    font-size: 1.2em;
+}
+
+
+
+
+
+
