--- a/client/tech-news-app/src/styles/Posts.css
+++ b/client/tech-news-app/src/styles/Posts.css
@@ -35,11 +35,82 @@
     color: grey;
 }
 
+.comment-icon:hover {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -o-transform: scale(1.3);
+}
+
+.comment-icon:active {
+    color: green;
+    box-shadow: grey;
+}
+
 .pagin-links {
-    display: block!important;
-    width: max-content!important;
-    margin-right: auto!important;
-    margin-left: auto!important;
+    display: block !important;
+    width: max-content !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
+
+.comment-input {
+    padding: 1.25rem 1.25rem 0 1.25rem !important;
+}
+
+.text-area {
+    max-height: 200px;
+}
+
+.rating {
+    float: left;
+}
+
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
+  follow these rules. Every browser that supports :checked also supports :not(), so
+  it doesn’t make the test unnecessarily selective */
+.rating:not(:checked) > input {
+    position: absolute;
+    /*top:-9999px;*/
+    clip: rect(0, 0, 0, 0);
+}
+
+.rating:not(:checked) > label {
+    float: right;
+    width: 1em;
+    /* padding:0 .1em; */
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    font-size: 200%;
+    /* line-height:1.2; */
+    color: #ddd;
+}
+
+.rating:not(:checked) > label:before {
+    content: '★ ';
+}
+
+.rating > input:checked ~ label {
+    color: #337ab7;
+}
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+    color: #337ab7;
+}
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+    color: #337ab7;
+}
+
+.rating > label:active {
+    position: relative;
+    top: 2px;
+    left: 2px;
 }
 
 
