--- a/client/tech-news-app/src/styles/Index.css
+++ b/client/tech-news-app/src/styles/Index.css
@@ -1,5 +1,15 @@
 body {
-    background: radial-gradient(40% 50%, #FAECD5, #CAE4D8);
+    /*background: radial-gradient(40% 50%, #05464d, #324b4d);*/
+    background: #ADA996;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /*background: #BBD2C5;  !* fallback for old browsers *!*/
+    /*background: -webkit-linear-gradient(to right, #536976, #BBD2C5);  !* Chrome 10-25, Safari 5.1-6 *!*/
+    /*background: linear-gradient(to right, #536976, #BBD2C5); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
+
+
+
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
