--- a/client/tech-news-app/src/styles/Posts.css
+++ b/client/tech-news-app/src/styles/Posts.css
@@ -31,8 +31,12 @@
 }
 
 .comment-icon {
-    font-size: 18px !important;
+    font-size: 14px !important;
     color: grey;
+}
+
+.comment-count {
+    font-size: 16px !important;
 }
 
 .comment-icon:hover {
