--- a/client/tech-news-app/src/styles/Posts.css
+++ b/client/tech-news-app/src/styles/Posts.css
@@ -30,6 +30,10 @@
     font-size: 1.1em;
 }
 
+.comment-author-link {
+    text-decoration: none!important;
+}
+
 .comment-icon {
     font-size: 14px !important;
     /*color: grey;*/
