--- a/client/tech-news-app/src/styles/UserLogin.css
+++ b/client/tech-news-app/src/styles/UserLogin.css
@@ -20,3 +20,12 @@
 .profile-social-icon {
     margin-top: 42% !important;
 }
+
+.profile-edit-icon {
+    font-size: 1.5em;
+}
+
+.soc-name {
+    margin-top:4.9rem!important;
+    font-size: 1.1em;
+}
