--- a/client/tech-news-app/src/styles/Posts.css
+++ b/client/tech-news-app/src/styles/Posts.css
@@ -31,7 +31,7 @@
 }
 
 .comment-author-link {
-    text-decoration: none!important;
+    text-decoration: none !important;
 }
 
 .comment-icon {
@@ -67,8 +67,8 @@
 }
 
 .comment-author-photo {
-    width: 50px!important;
-    height: 50px!important;
+    width: 50px !important;
+    height: 50px !important;
 }
 
 .text-area {
@@ -79,9 +79,6 @@
     float: left;
 }
 
-/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
-  follow these rules. Every browser that supports :checked also supports :not(), so
-  it doesn’t make the test unnecessarily selective */
 .rating:not(:checked) > input {
     position: absolute;
     /*top:-9999px;*/
@@ -91,17 +88,16 @@
 .rating:not(:checked) > label {
     float: right;
     width: 1em;
-    /* padding:0 .1em; */
     overflow: hidden;
     white-space: nowrap;
     cursor: pointer;
     font-size: 200%;
-    /* line-height:1.2; */
-    color: #ddd;
+    color: #bcbcbc;
 }
 
 .rating:not(:checked) > label:before {
     content: '★ ';
+
 }
 
 .rating > input:checked ~ label {
@@ -127,7 +123,13 @@
     left: 2px;
 }
 
+.MuiTypography-h6 {
+    font-size: 1.8rem !important;
+}
 
+.vv {
+    min-height: auto !important;
+}
 
 
 
