--- a/client/tech-news-app/src/styles/Header.css
+++ b/client/tech-news-app/src/styles/Header.css
@@ -1,6 +1,12 @@
 .auth-button {
     margin-top: 2%;
 }
+/*.mm {*/
+/*    background-image: url("../static/technology.jpg");*/
+/*    background-repeat: no-repeat;*/
+/*    background-size: 100%;*/
+/*    height: 250px;*/
+/*}*/
 
 .sing-in-button {
     margin-left: 5px;
