--- a/client/tech-news-app/src/styles/Posts.css
+++ b/client/tech-news-app/src/styles/Posts.css
@@ -32,12 +32,16 @@
 }
 
 .post-desc span, a {
-    font-size: 1.05em!important;
+    font-size: 1.05em !important;
     background-color: transparent !important;
 }
 
 .comment-author-link {
     text-decoration: none !important;
+}
+
+.comment-author-link:hover {
+    color: #575464 !important;
 }
 
 .comment-icon {
@@ -88,7 +92,6 @@
 
 .rating:not(:checked) > input {
     position: absolute;
-    /*top:-9999px;*/
     clip: rect(0, 0, 0, 0);
 }
 
@@ -104,7 +107,6 @@
 
 .rating:not(:checked) > label:before {
     content: '★ ';
-
 }
 
 .rating > input:checked ~ label {
@@ -130,13 +132,23 @@
     left: 2px;
 }
 
+.post-star {
+    font-size: 180%;
+    color: #337ab7;
+}
+
+.post-star-empty {
+    font-size: 180%;
+    color: #bcbcbc;
+}
+
 .MuiTypography-h6 {
     font-size: 1.8rem !important;
 }
 
 .post-edit-picture {
-    max-width: 250px !important;
-    height: 200px !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
 }
 
 select, input[type="file"] {
@@ -145,8 +157,8 @@ select, input[type="file"] {
 }
 
 .post-edit-pic-input {
-    margin-top: 28%;
-    margin-left: -8%;
+    margin-top: 33.5%;
+    margin-left: -4%;
 }
 
 .tox .tox-notification {
@@ -169,9 +181,9 @@ select, input[type="file"] {
 }
 
 .page-item.active .page-link {
-    background-color: #007bff!important;
+    background-color: #007bff !important;
 }
 
-.pagination>li>a, .pagination>li>span {
-    background-color: #fff!important;
+.pagination > li > a, .pagination > li > span {
+    background-color: #fff !important;
 }
