--- a/client/tech-news-app/src/styles/Header.css
+++ b/client/tech-news-app/src/styles/Header.css
@@ -70,8 +70,8 @@ input.hidden {
     border: 2px solid #03b1ce;
 }
 
-.tital {
-    font-size: 16px;
+.title {
+    font-size: 1.5rem;
     font-weight: 500;
 }
 
