--- a/client/tech-news-app/src/styles/Posts.css
+++ b/client/tech-news-app/src/styles/Posts.css
@@ -60,12 +60,11 @@
 
 .comment-icon {
     font-size: 14px !important;
-    /*color: grey;*/
     color: #d73d4c;
 }
 
 .comment-count {
-    font-size: 16px !important;
+    font-size: 1.4rem!important;
 }
 
 .comment-icon:hover {
