--- a/client/tech-news-app/src/styles/footer.css
+++ b/client/tech-news-app/src/styles/footer.css
@@ -39,9 +39,9 @@
 }
 
 .copyright {
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 .copyright a {
-    text-decoration: none;
+    text-decoration: none !important;
 }
