--- a/client/tech-news-app/src/styles/index.css
+++ b/client/tech-news-app/src/styles/index.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
+    font-size: 1.5em!important;
     /*background: radial-gradient(40% 50%, #05464d, #324b4d);*/
 
 
