--- a/client/tech-news-app/src/styles/header.css
+++ b/client/tech-news-app/src/styles/header.css
@@ -11,8 +11,8 @@
 .user-action-button {
     color: white !important;
     padding-right: 3px !important;
-    padding-bottom: 2px!important;
-    padding-top: 2px!important;
+    padding-bottom: 2px !important;
+    padding-top: 2px !important;
 }
 
 .user-action-button:hover {
@@ -26,7 +26,6 @@
 .navbar-body {
     width: 91.6% !important;
     max-width: 94% !important;
-    margin-bottom: 10px !important;
 }
 
 .header-wrapper {
@@ -39,7 +38,8 @@
 }
 
 .navlink {
-    font-size: 1.15em;
+    font-size: 1.05em !important;
+    margin-right: 10px;
     color: grey;
     text-decoration: none !important;
 }
@@ -99,18 +99,21 @@ input.hidden {
 .admin-post-input {
     width: 100% !important;
     height: 30px !important;
+    border: #5b5b5b solid 1px;
+    border-radius: 5px;
+    padding: 1px 5px;
 }
 
 .btn-info, .btn-info:active, .btn-info:focus {
     background-color: #5b5b5b !important;
-    border-color: transparent!important;
-    box-shadow: none!important;
+    border-color: transparent !important;
+    box-shadow: none !important;
 }
 
 .btn-info:hover {
     background-color: #818181 !important;
-    border-color: transparent!important;
-    box-shadow: none!important;
+    border-color: transparent !important;
+    box-shadow: none !important;
 }
 
 .btn-success {
