--- a/client/tech-news-app/src/styles/libraries-overload.css
+++ b/client/tech-news-app/src/styles/libraries-overload.css
@@ -1,3 +1,8 @@
+.row {
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
+
 .mh-50 {
     display: -webkit-box;
     -webkit-line-clamp: 5;
@@ -51,13 +56,22 @@
     font-size: 1.4rem !important;
 }
 
-.MuiDialog-paperWidthSm {
-    width: 100% !important;
-}
+/*.MuiDialog-paperWidthSm {*/
+/*    width: 100% !important;*/
+/*}*/
 
 .MuiTypography-overline {
     font-size: 1.1rem !important;
     margin-right: 5% !important;
+}
+
+.MuiInputBase-root {
+    font-size: 0.9em!important;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 1px 10px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
 .tox .tox-notification {
@@ -69,14 +83,22 @@
     visibility: hidden !important;
 }
 
+.dropdown-item {
+    font-size: 1.5em !important;
+}
+
 .dropdown-item.active {
-    color: #212529;
+    color: #729da8 !important;
     text-decoration: none;
     background-color: transparent;
 }
 
 .dropdown-item:hover {
     background-color: #f2f2f2 !important;
+}
+
+.form-control {
+    font-size: 1em !important;
 }
 
 .input-group-form {
@@ -107,6 +129,7 @@
 
 .btn {
     text-shadow: none !important;
+    font-size: 1em !important;
 }
 
 .page-link:focus, .page-link:active {
@@ -130,7 +153,3 @@
 .ml-6 {
     margin-left: 5rem !important
 }
-
-/*.MuiDialog-paperWidthSm {*/
-/*    max-width: 320px !important;*/
-/*}*/
