--- a/client/tech-news-app/src/styles/posts.css
+++ b/client/tech-news-app/src/styles/posts.css
@@ -68,6 +68,12 @@
     padding-left: 0!important;
 }
 
+.post-star-text {
+    font-size: 1.1em;
+    position: relative;
+    top: 10px;
+}
+
 .comment-author-link {
     text-decoration: none !important;
 }
