--- a/client/tech-news-app/src/styles/index.css
+++ b/client/tech-news-app/src/styles/index.css
@@ -12,13 +12,12 @@ body {
     /*background: -webkit-linear-gradient(to right, #536976, #BBD2C5);  !* Chrome 10-25, Safari 5.1-6 *!*/
     /*background: linear-gradient(to right, #536976, #BBD2C5); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
 
-    background-color: #dcdcdc;
-
+    /*background-color: #dcdcdc;*/
+    /*background-image: url("../static/technologybackground.png");*/
+    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../static/technologybackground.png");
+    background-position:center top;
     margin: 0;
     padding: 0;
-    /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",*/
-    /*"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",*/
-    /*sans-serif;*/
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -55,4 +54,19 @@ code {
 .error-actions .btn {
     margin-right: 10px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15), 0 1px 2px rgba(0, 0, 0, .05);
+}
+
+.login-icon {
+    height: 30px
+}
+
+.login-icon i {
+    margin-left: -5px;
+}
+
+.login-form {
+    margin-top: 20%!important;
+}
+.reg-form {
+    margin-top: 10%!important;
 }
