--- a/client/tech-news-app/src/styles/index.css
+++ b/client/tech-news-app/src/styles/index.css
@@ -1,21 +1,12 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif !important;
     font-size: 1.5em !important;
-    /*background: radial-gradient(40% 50%, #05464d, #324b4d);*/
 
-
-    /*background: #ADA996; !* fallback for old browsers *!*/
-    /*background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); !* Chrome 10-25, Safari 5.1-6 *!*/
-    /*background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
-
-    /*background: #BBD2C5;  !* fallback for old browsers *!*/
-    /*background: -webkit-linear-gradient(to right, #536976, #BBD2C5);  !* Chrome 10-25, Safari 5.1-6 *!*/
+    /*background: linear-gradient(to right, #c4c0ad, #F2F2F2, #F2F2F2, #c4c0ad); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
+    /*background: linear-gradient(to right, #262424, #908d8d, #908d8d, #262424); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
     /*background: linear-gradient(to right, #536976, #BBD2C5); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
 
-    /*background-color: #dcdcdc;*/
-    /*background-image: url("../static/technologybackground.png");*/
-    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../static/technologybackground.png");
-    background-position:center top;
+    /*background-position:center top;*/
     margin: 0;
     padding: 0;
     -webkit-font-smoothing: antialiased;
@@ -65,8 +56,9 @@ code {
 }
 
 .login-form {
-    margin-top: 20%!important;
+    margin-top: 10% !important;
 }
+
 .reg-form {
-    margin-top: 10%!important;
+    margin-top: 10% !important;
 }
