--- a/client/tech-news-app/src/styles/posts.css
+++ b/client/tech-news-app/src/styles/posts.css
@@ -4,7 +4,6 @@
 }
 
 .post-title {
-    font-size: 1.6rem;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
@@ -16,8 +15,8 @@
 }
 
 .post-title a {
+    font-size: 1.3em;
     text-decoration: none !important;
-    font-size: 1.3rem;
     color: #337ab7;
 }
 
@@ -52,34 +51,29 @@
     display: flex;
 }
 
-.post-desc, a {
-    font-size: 1.05em !important;
-    background-color: transparent !important;
-}
-
 .post-desc a {
     font-size: 1em !important;
-    text-decoration: none!important;
+    text-decoration: none !important;
 }
 
 .post-desc br {
-    display: none!important;
+    display: none !important;
 }
 
 .post-desc p a.noborder {
-    display: none!important;
+    display: none !important;
 }
 
 .post-desc ul {
-    list-style: none!important;
+    list-style: none !important;
 }
 
 .post-desc li {
-    margin-bottom: 5px!important;
+    margin-bottom: 5px !important;
 }
 
 .wp-caption-dd {
-    margin-top: -40px!important;
+    margin-top: -40px !important;
     font-size: 15px !important;
     color: gray;
 }
@@ -104,7 +98,7 @@
 }
 
 .comment-author-link {
-    font-size: 17px!important;
+    font-size: 17px !important;
     text-decoration: none !important;
 }
 
@@ -169,7 +163,7 @@
     white-space: nowrap;
     cursor: pointer;
     font-size: 200%;
-    color: #bcbcbc;
+    color: #d4d4d4;
 }
 
 .rating:not(:checked) > label:before {
@@ -264,7 +258,7 @@ select, input[type="file"] {
 }
 
 .pagination > li > a, .pagination > li > span {
-    background-color: #fff !important;
+    /*background-color: #fff !important;*/
     color: rgb(19, 38, 62) !important;
 }
 
@@ -303,7 +297,12 @@ select, input[type="file"] {
 
 .post-review-wrapper {
     padding: 2rem 3rem;
-    background-color: #f5f5f5;
-    max-width: 88.993333%;
+    max-width: 91.993333%;
     border-radius: 5px;
+}
+
+.w-95 {
+    flex: 0 0 95% !important;
+    max-width: 95%!important;
+    width: 95% !important;
 }
