--- a/client/tech-news-app/src/styles/header.scss
+++ b/client/tech-news-app/src/styles/header.scss
@@ -153,7 +153,7 @@ input.hidden {
 .search-icon {
   position: absolute;
   bottom: 7px;
-  left: 205px;
+  left: 218px;
   cursor: pointer;
 
   &:hover {
@@ -172,5 +172,5 @@ input.hidden {
 .complete-search-res {
   font-family: 'Roboto', sans-serif !important;
   margin: 0 0 1.5rem 5rem !important;
-  color: #d3eaf1;
+  color: white;
 }
