--- a/client/tech-news-app/src/styles/libraries-overload.css
+++ b/client/tech-news-app/src/styles/libraries-overload.css
@@ -158,3 +158,12 @@
 .dropdown-item.active, .dropdown-item:active {
     background-color: transparent!important;
 }
+
+.navbar-toggler {
+    background-color: rgb(47, 47, 47) !important;
+    outline: none!important;
+}
+
+.navbar-icon {
+    color: white;
+}
