--- a/client/tech-news-app/src/styles/header.scss
+++ b/client/tech-news-app/src/styles/header.scss
@@ -185,7 +185,7 @@ input.hidden {
   text-align: center;
   margin-top: 3rem !important;
   margin-bottom: 3rem !important;
-  color: #d3eaf1;
+  color: #1d1d1d;
 }
 
 .complete-search-res {
@@ -197,5 +197,4 @@ input.hidden {
 .auth-button {
   float: right!important;
   height: 33px;
-  //margin-top: 40px;
 }
