--- a/client/tech-news-app/src/styles/posts.scss
+++ b/client/tech-news-app/src/styles/posts.scss
@@ -23,17 +23,17 @@
 .post-title a {
     font-size: 1.3em;
     text-decoration: none !important;
-    color: #337ab7;
+    color: #0c4d6c;
 }
 
 .post-title a:hover {
-    color: #4d4d4d;
+    color: #2282af;
 }
 
 .post {
     margin-bottom: 10px;
     max-width: 91.4%;
-    padding: 15px 8px!important;
+    padding: 15px 8px 0 8px!important;
 }
 
 .post-desc {
