--- a/client/tech-news-app/src/styles/profile.scss
+++ b/client/tech-news-app/src/styles/profile.scss
@@ -61,3 +61,8 @@
     background-color: rgba(4, 126, 179, 0.97) !important;
   }
 }
+
+.profile-edit-wrapper {
+  max-width: 91.993333%!important;
+  padding: 0!important;
+}
