--- a/client/tech-news-app/src/styles/messages.scss
+++ b/client/tech-news-app/src/styles/messages.scss
@@ -118,3 +118,16 @@
   color: #6c757d;
 }
 
+.unread-msg-counter {
+  position: absolute;
+  top: 14px;
+  display: inline-block;
+  background: #ccc;
+  color: #000;
+  text-align: center;
+  border-radius: 50%;
+  margin-left: 10px;
+  padding: 0.1em 0;
+  width: 1.5em;
+  height: 1.5em;
+}
