--- a/client/tech-news-app/src/styles/messages.scss
+++ b/client/tech-news-app/src/styles/messages.scss
@@ -123,11 +123,11 @@
   top: 14px;
   display: inline-block;
   background: #ccc;
-  color: #000;
   text-align: center;
   border-radius: 50%;
-  margin-left: 10px;
-  padding: 0.1em 0;
+  margin-left: 5px;
+  padding: 0.05em 0;
   width: 1.5em;
   height: 1.5em;
+  font-size: 13px;
 }
