--- a/client/tech-news-app/src/styles/footer.scss
+++ b/client/tech-news-app/src/styles/footer.scss
@@ -31,11 +31,6 @@
   -o-transition-duration: 0.5s;
 }
 
-.active-soc:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -o-transform: scale(1.1);
-}
 
 .active-soc {
   -webkit-transform: scale(0.8);
@@ -44,6 +39,12 @@
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
   -o-transition-duration: 0.5s;
+
+  &:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+  }
 }
 
 #social-fb:hover {
@@ -149,7 +150,7 @@
   display: flex;
   margin: 0 auto 5px auto;
 
-  &.spring{
+  &.spring {
     max-width: 330px;
     margin: 0 auto 15px auto;
   }
