--- a/client/tech-news-app/src/styles/footer.scss
+++ b/client/tech-news-app/src/styles/footer.scss
@@ -29,6 +29,7 @@
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
   -o-transition-duration: 0.5s;
+  filter: saturate(20%);
 }
 
 
